# result_option

./: .markdownlint.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
src/: infallible.rs  lib.rs
