[package]
name = "result_option"
version = "0.1.0"
edition = "2024"
authors = ["Pavel Kučera <teni@zlin6.cz>"]
description = "An enum combining Result and Option into a single type."
license = "MIT"
repository = "https://github.com/tencek/result_option"
keywords = ["result", "option", "utility", "error-handling"]
categories = ["data-structures", "rust-patterns"]
readme = "README.md"
